<Ubah> ubah schema name dan address menjadi nama menjadi alamat pada tabel tabel
