# smartfarm-api/internal/docs/swagger.yaml
@@ -1,27 +1,5 @@
 basePath: /api
 definitions:
-  petani.Petani:
-    properties:
-      address:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      updated_at:
-        type: string
-    type: object
-  petani.PetaniRequest:
-    properties:
-      address:
-        example: Padang Panjang
-        type: string
-      name:
-        example: Suwardi
-        type: string
-    type: object
   user.LoginRequest:
     properties:
       password:
@@ -67,115 +45,6 @@ info:
   title: SmartFarm API
   version: "1.0"
 paths:
-  /admin/petani:
-    get:
-      description: Menampilkan seluruh data petani
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/petani.Petani'
-            type: array
-      security:
-      - BearerAuth: []
-      summary: Mendapatkan semua petani
-      tags:
-      - Petani
-    post:
-      consumes:
-      - application/json
-      description: Menyimpan data petani ke database
-      parameters:
-      - description: Data Petani
-        in: body
-        name: petani
-        required: true
-        schema:
-          $ref: '#/definitions/petani.PetaniRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/petani.Petani'
-      security:
-      - BearerAuth: []
-      summary: Menambahkan petani baru
-      tags:
-      - Petani
-  /admin/petani/{id}:
-    delete:
-      description: Menghapus data petani berdasarkan ID
-      parameters:
-      - description: ID Petani
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Menghapus data petani
-      tags:
-      - Petani
-    get:
-      description: Mengambil data petani tertentu berdasarkan ID
-      parameters:
-      - description: ID Petani
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/petani.Petani'
-      security:
-      - BearerAuth: []
-      summary: Menampilkan detail petani berdasarkan ID
-      tags:
-      - Petani
-    put:
-      consumes:
-      - application/json
-      description: Mengupdate nama dan alamat petani
-      parameters:
-      - description: ID Petani
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Data Petani
-        in: body
-        name: petani
-        required: true
-        schema:
-          $ref: '#/definitions/petani.PetaniRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/petani.Petani'
-      security:
-      - BearerAuth: []
-      summary: Memperbarui data petani
-      tags:
-      - Petani
   /auth/login:
     post:
       consumes:
